--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Portifolio
-@using Portifolio.Shared
-@using Portifolio.Pages.Components
+@using Portfolio
+@using Portfolio.Shared
+@using Portfolio.Pages.Components
