--- a/Pages/Components/Aside.razor
+++ b/Pages/Components/Aside.razor
@@ -1,5 +1,5 @@
 <aside class="mat-layout-grid-cell-span-3">
-    <p><a href="">LinkedIn</a></p>
+    <p><a href="https://www.linkedin.com/in/davimartimiano/">LinkedIn</a></p>
     <p><a href="">GitHub</a></p>
     <p><a href="about.me/martimianojunior">About.me</a></p>
 </aside>
